# MultiSlider

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/include/: CMakeLists.txt  mainwindow.h
examples/src/: CMakeLists.txt  mainwindow.cpp
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt  multislider.h
lib/src/: CMakeLists.txt  multislider.cpp
